--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^5.0.0",
+    "@supabase/supabase-js": "^2.31.0",
     "@vite-pwa/nuxt": "^0.1.0",
     "nuxt-icon": "^0.4.2",
     "pinia": "^2.1.4",
